[gd_scene load_steps=3 format=3 uid="uid://world_map"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/ui/WorldMap.gd" id="2"]

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "World Map"
horizontal_alignment = 1
theme_type_variation = "H1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="TownButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Town"

[node name="ForestButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Forest"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TownButton" to="." method="_on_town_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ForestButton" to="." method="_on_forest_pressed"]
